initial fury transition